...
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
    <string name="no_account_text">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up here!</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_button">Sign up</string>
    <string name="login_layout_link">Login instead.</string>
    <!--end of login signup texts-->

    <string name="wallet_bank_title">Coinz Wallet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
...
